--- a/contact.html
+++ b/contact.html
@@ -1,56 +1,87 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-us">
 
 <head>
-    <title>My Profile</title>
-    <link rel="stylesheet" type="text/css" href="assets/css/style_contact.css">
+
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+    <title>Bootstrap Portfolio Contact</title>
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+
+    <link rel="stylesheet" href="../Bootstrap-Portfolio/assets/css/style.css" media="screen">
+
 </head>
 
 <body>
-    <div class="header">
-        <div id="name">
-            <h1>Marcelo Sanchez</h1>
-        </div>
-        <div id="list">
-            <a href="portfolio.html">
-                <h3>Portfolio</h3>
-            </a>
-        </div>
-    </div>
 
-    <div class="section">
-        <div id="title">
-            <h1>Contact</h1>
-            <hr>
-            <br>
-            <form class="first-form">
-                <div class="form-group">
-                    <label>Name </label>
-                    <input type="text" name="name">
-                </div>
-                <div class="form-group">
-                    <label>Email </label>
-                    <input type="text" name="email">
-                </div>
-                <div class="form-group">
-                    <label>Message </label>
-                    <textarea name="message"></textarea>
-                </div>
-                <input class="button" type="submit" value="Submit" name="">
-
-        </div>
-        </form>
-    </div>
-    </div>
-
-
-    <div class="footer">
-        <footer>
-            <div id="copyright">
-                <h6>Copyright ☺</h6>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container">
+            <a class="navbar-brand" href="index.html" id="logo">Marcelo Sanchez</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01"
+                aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+                <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" href="contact.html">Contact</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="portfolio.html">Portfolio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">About</a>
+                    </li>
+                </ul>
             </div>
-        </footer>
-    </div>
+        </div>
+    </nav>
+
+    <main class="container">
+        <section class="row">
+            <div class="col-md-8">
+                <form class="block form-horizontal">
+                    <h1 class="block-header">Contact</h1>
+                    <hr />
+                    <div class="form-group">
+                        <label for="name" class="col-sm-2 control-label">Name</label>
+                        <div class="col-sm-10">
+                            <input type="email" class="form-control" id="name" placeholder="Name">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="email" class="col-sm-2 control-label">Email</label>
+                        <div class="col-sm-10">
+                            <input type="password" class="form-control" id="email" placeholder="Email">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="col-sm-2 control-label" for="msg">Message</label>
+                        <div class="col-sm-10">
+                            <textarea id="msg" class="form-control" rows="3" placeholder="Message"></textarea>
+                        </div>
+                    </div>
+                    <button class="submit-btn">Submit</button>
+                </form>
+            </div>
+        </section>
+    </main>
+
+    <footer class="footer">
+        <div class="two-toned-footer-color"></div>
+        <p class="text-muted text-muted-footer text-center">
+            &copy; Copyright
+        </p>
+    </footer>
+
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+    </script>
+
 </body>
 
 </html>
